added footer icons

--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -31,6 +31,19 @@
   animation: .5s ease-out init;
 }
 
+#footer img {
+  width: 50px;
+  cursor: pointer;
+}
+
+#footer a {
+  border: none;
+}
+
+#footer a + a {
+  margin-left: .5rem;
+}
+
 table {
   margin: 0;
 }
