--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -36,12 +36,76 @@
   cursor: pointer;
 }
 
+#footer a + a {
+  margin-left: 3rem;
+}
+
+@media screen and (max-width: 500px) {
+  #footer a + a {
+    margin-left: 1rem;
+  }
+  #footer img {
+    width: 40px;
+  }
+}
+
 #footer a {
   border: none;
 }
 
-#footer a + a {
-  margin-left: 3rem;
+@media screen and (max-width: 500px) {
+  #user-details {
+    font-size: .8em;
+  }
+}
+
+#user-details img {
+  width: 200px;
+}
+
+#user-details input, #user-details select {
+  padding: .3em;
+  border-radius: 5px;
+}
+
+.trapezoid, .trapezoid-r, .trapezoid-l {
+  width: 15rem;
+  text-align: center;
+  height: 0;
+  position: relative;
+  box-sizing: content-box;
+}
+
+@media screen and (max-width: 500px) {
+  .trapezoid, .trapezoid-r, .trapezoid-l {
+    width: 10rem;
+  }
+}
+
+.trapezoid-r {
+  border-right: 25px solid transparent;
+  border-top: 34px solid #f97c91;
+  border-left: 0px solid transparent;
+}
+
+.trapezoid-r span {
+  position: absolute;
+  top: -30px;
+  left: 10%;
+  color: #fff;
+}
+
+.trapezoid-l {
+  border-right: 0px solid transparent;
+  border-bottom: 34px solid #1e9bf7;
+  border-left: 25px solid transparent;
+}
+
+.trapezoid-l span {
+  position: absolute;
+  top: 4px;
+  right: 10%;
+  color: #fff;
 }
 
 table {
