separate schemes preview window

--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -124,6 +124,10 @@ table td {
   vertical-align: middle;
 }
 
+table a {
+  border: none;
+}
+
 .round-robin-table {
   border-spacing: 0;
   width: 100%;
