--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -109,6 +109,7 @@
 }
 
 table {
+  width: initial;
   margin: 0;
 }
 
@@ -130,7 +131,6 @@ table a {
 
 .round-robin-table {
   border-spacing: 0;
-  width: 100%;
   margin: 1.5em 0;
 }
 
@@ -166,11 +166,15 @@ table a {
 }
 
 table.elimination-table {
+  margin: auto;
   table-layout: auto;
   border-collapse: separate;
   border-spacing: 1rem;
   font-size: .8rem;
-  background-color: white;
+}
+
+table.elimination-table table {
+  width: 16rem;
 }
 
 table.elimination-table th {
@@ -182,6 +186,13 @@ table.elimination-table .td-container {
   border-radius: 5px;
   padding-left: .5rem;
   padding-right: 2rem;
+  color: white;
+  background-image: -moz-linear-gradient(75deg, #385BA8 15%, #1FA0FF 55%);
+  background-image: -webkit-linear-gradient(75deg, #385BA8 15%, #1FA0FF 55%);
+  background-image: -ms-linear-gradient(75deg, #385BA8 15%, #1FA0FF 55%);
+  background-image: linear-gradient(75deg, #385BA8 15%, #1FA0FF 55%);
+  background-size: auto;
+  background-repeat: no-repeat;
 }
 
 table.elimination-table .number {
@@ -200,12 +211,19 @@ table.elimination-table .delim {
 table.elimination-table .team-label {
   border: 0.5px solid rgba(153, 153, 153, 0.25);
   min-width: 12em;
-  min-height: 2em;
   border-radius: 5px;
   text-align: center;
   word-wrap: break-word;
+  background-color: #1FA0FF;
+  background-size: auto;
+  background-repeat: no-repeat;
+  color: white;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  padding: 0 1rem;
 }
 
 table.elimination-table .match-table {
-  min-width: 14rem;
+  width: 16rem;
 }
