--- a/src/css/styles.scss
+++ b/src/css/styles.scss
@@ -82,6 +82,7 @@
 }
 
 table {
+  width: initial;
   .score{
     font-weight: 700;
     sup {
@@ -102,7 +103,6 @@ table {
 
 .round-robin-table{
   border-spacing: 0;
-  width: 100%;
   tr {
     padding: 0;
   }
@@ -141,11 +141,16 @@ table {
 }
 
 table.elimination-table {
+  margin: auto;
   table-layout: auto;
   border-collapse: separate;
   border-spacing: 1rem;
   font-size: .8rem;
-  background-color: white; 
+  // background-color: #f5f7fa;
+  
+  table {
+    width: 16rem;
+  }
 
   th {
     border-bottom: 1px solid $primary;
@@ -156,6 +161,13 @@ table.elimination-table {
     border-radius: 5px;
     padding-left: .5rem;
     padding-right: 2rem;
+    color: white;
+		background-image: -moz-linear-gradient(75deg, #385BA8 15%, #1FA0FF 55%);
+		background-image:  -webkit-linear-gradient(75deg, #385BA8 15%, #1FA0FF 55%);
+		background-image:  -ms-linear-gradient(75deg, #385BA8 15%, #1FA0FF 55%);
+		background-image:  linear-gradient(75deg, #385BA8 15%, #1FA0FF 55%);
+		background-size:  auto;
+		background-repeat:  no-repeat;
   }
 
   .number {
@@ -174,13 +186,20 @@ table.elimination-table {
   .team-label{
     border: .5px solid rgba(153, 153, 153, 0.25);
     min-width: 12em;
-    min-height: 2em;
     border-radius: 5px;
     text-align: center;
     word-wrap: break-word;
+    background-color: #1FA0FF;
+		background-size:  auto;
+    background-repeat:  no-repeat;
+    color: white;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    padding: 0 1rem;
   }
 
   .match-table {
-    min-width: 14rem;
+    width: 16rem;
   }
 }
