--- a/src/app/login-styles.css
+++ b/src/app/login-styles.css
@@ -22,3 +22,28 @@ input[type="date"]:focus {
   text-align: left;
   color: red;
 }
+
+.login-button {
+  cursor: pointer;
+  padding: .5rem 1rem;
+  color: white;
+  width: 12rem;
+  text-align: center;
+  background-color: #1FA0FF;
+  /* background-image: -moz-linear-gradient(75deg, #f97c91 15%, #1FA0FF 55%);
+  background-image:  -webkit-linear-gradient(75deg, #f97c91 15%, #1FA0FF 55%);
+  background-image:  -ms-linear-gradient(75deg, #f97c91 15%, #1FA0FF 55%);
+  background-image:  linear-gradient(75deg, #f97c91 35%, #1FA0FF 55%);
+  background-size:  auto;
+  background-repeat:  no-repeat; */
+  border: 1px solid transparent;
+  border-radius: 5px;
+}
+
+.login-button:hover {
+  background: transparent;
+  color: #1FA0FF;
+  border: 1px solid #1FA0FF;
+  transition: all .25s linear;
+  font-weight: 700;
+}
