--- a/src/css/styles.scss
+++ b/src/css/styles.scss
@@ -1,6 +1,21 @@
 @import 'variables';
 @import 'animations';
 
+
+.backdrop {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(59, 59, 59, 0.5);
+  z-index: 100;
+}
+
+.modal {
+  background-color: white;
+}
+
 #footer {
   img{
     width: 50px;
