--- a/src/css/styles.scss
+++ b/src/css/styles.scss
@@ -14,6 +14,19 @@
 
 .modal {
   background-color: white;
+  margin-top: 40vh; 
+  min-height: 10rem; 
+  display: flex;
+  flex-direction: column;
+  justify-content: space-around;
+  text-align: center;
+
+  @media screen and (max-width: 479px) {
+    ul {
+      width: 10rem;
+      margin: 1rem auto;
+    }
+  }
 }
 
 #footer {
