--- a/src/app/login-styles.css
+++ b/src/app/login-styles.css
@@ -32,6 +32,24 @@ input[type="date"]:focus {
   background: #fff;
 }
 
+input[type="submit"]{
+  padding: .1em .8em;
+  cursor: pointer;
+  display: inline-block;
+  font-weight: 700;
+  text-align: center;
+  border-radius: 0;
+  color: #1FA0FF;
+  border:1px solid #1FA0FF;
+}
+
+input[type="submit"]:hover {
+  color: white;
+  background-color: #1FA0FF;
+  border-color: #1FA0FF;
+  transition: all .25s ease-in-out;
+}
+
 .error {
   font-size: .8em;
   text-align: left;
