--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -31,6 +31,33 @@
   animation: .5s ease-out init;
 }
 
+.image-modal {
+  position: relative;
+  width: 100%;
+  height: 100%;
+  box-sizing: border-box;
+}
+
+.image-modal .img {
+  position: fixed;
+  top: 10%;
+  left: 50%;
+  width: 50rem;
+  max-height: 40rem;
+  margin-left: -25rem;
+}
+
+.image-modal .img img {
+  width: 100%;
+}
+
+@media screen and (max-width: 736px) {
+  .image-modal .img {
+    width: 25rem;
+    margin-left: -12.5rem;
+  }
+}
+
 .backdrop {
   position: fixed;
   top: 0;
