--- a/src/css/styles.scss
+++ b/src/css/styles.scss
@@ -1,6 +1,30 @@
 @import 'variables';
 @import 'animations';
 
+.image-modal {
+  position: relative;
+  width: 100%;
+  height: 100%;
+  box-sizing: border-box;
+
+  .img {
+    position: fixed;
+    top: 10%;
+    left: 50%;
+    width: 50rem;
+    max-height: 40rem;
+    margin-left: -25rem;
+
+    img {
+      width: 100%;
+    }
+
+    @media screen and (max-width: 736px) {
+      width: 25rem;
+      margin-left: -12.5rem;
+    }
+  }
+}
 
 .backdrop {
   position: fixed;
